--- a/apps/portfolio/app/globals.css
+++ b/apps/portfolio/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .text-animation {
+    @apply animate-loop bg-[length:400%_400%] text-transparent bg-clip-text bg-gradient-to-r from-blue-500 via-green-300 to-blue-500;
+  }
+  .link {
+    @apply font-medium text-zinc-900 underline underline-offset-4 dark:text-zinc-50;
+  }
+}
