--- a/apps/portfolio/app/globals.css
+++ b/apps/portfolio/app/globals.css
@@ -9,4 +9,7 @@
   .link {
     @apply font-medium text-zinc-900 underline underline-offset-4 dark:text-zinc-50;
   }
+  .card {
+    @apply rounded-lg border border-zinc-100 bg-white p-4 shadow-md outline-none dark:border-zinc-900 dark:bg-zinc-800;
+  }
 }
