--- a/apps/portfolio/app/globals.css
+++ b/apps/portfolio/app/globals.css
@@ -50,7 +50,7 @@
     --card-foreground: 213 31% 91%; /* not done */
 
     --border: 240 5% 26%; /* zinc-700 */
-    --input: 216 34% 17%; /* not done */
+    --input: 240 5% 26%; /* zinc-600 */
 
     --primary: 217 91% 60%; /* blue-500 */
     --primary-foreground: 0 0% 100%; /* white */
