Update slide component

--- a/apps/portfolio/app/globals.css
+++ b/apps/portfolio/app/globals.css
@@ -97,7 +97,8 @@
 
 body,
 .main {
+	height: 100vh;
 	min-height: 100vh;
 	/* mobile ios fix */
-	min-height: -webkit-fill-available;
+	/* min-height: -webkit-fill-available; */
 }
