--- a/apps/portfolio/app/globals.css
+++ b/apps/portfolio/app/globals.css
@@ -20,10 +20,11 @@
 
 @layer utilities {
   .fullscreen {
+    height: 100%;
     min-height: 100vh;
     /* Mobile ios fix */
     @supports (-webkit-touch-callout: none) {
-      height: -webkit-fill-available;
+      min-height: -webkit-fill-available;
     }
   }
 }
