💄 fix ui bug with slide panel

--- a/apps/portfolio/app/globals.css
+++ b/apps/portfolio/app/globals.css
@@ -20,7 +20,8 @@
 
 @layer utilities {
   .fullscreen {
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
     min-height: 100vh;
     /* Mobile ios fix */
     @supports (-webkit-touch-callout: none) {
