--- a/apps/portfolio/app/globals.css
+++ b/apps/portfolio/app/globals.css
@@ -23,7 +23,7 @@
 
 @layer utilities {
   .fullscreen {
-    height: 100vh;
+    /*height: 100vh*/
     overflow: hidden;
     min-height: 100vh;
     /* Mobile ios fix */
